--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -36,7 +36,7 @@
 
 .selected1 {
   border: 3px solid greenyellow;
-  background-color: rgba(188, 188, 188, 0.617);
+  // background-color: rgba(188, 188, 188, 0.617);
 }
 
 .selected2 {
@@ -73,11 +73,6 @@ h2 {
   color: var(--accent-color);
 }
 
-.textbox {
-  width: 260px;
-  margin: 64px;
-}
-
 h5 {
   // for
   color: var(--accent-color);
@@ -110,12 +105,26 @@ p {
 .page {
   height: 90vh;
   width: 100vw;
-  display: table-cell;
-  vertical-align: middle;
   // 900
 }
 
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 .textbox {
-  // margin-left: auto;
-  // margin-right: auto;
+  width: 302px;
+  margin: 64px;
+}
+
+.right {
+  margin-left: auto;
+  text-align: right;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
